--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pandas==2.1.1
 numpy==1.26.2
+pandas==2.0.3
 requests==2.32.0
-flask==2.3.5   # or your web framework
-gunicorn==21.2.0  # for deploying Flask/Django apps
+flask==2.3.5
+gunicorn==21.2.0
